--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<p>Du er nu godt i gang med familiens længste skattejagt.</p>
 	<p>Inden du skal videre til din næste trin på jagten har du fortjent lidt at styrke dig på!</p>
 	<p>Derfor får du et gavekort til 2 is eller andet sødt, hos Chris & Mario på Bornholm.</p>
-	<img src="gavekort1.jpg" alt="Kan ikke vise dit gavekort" style="transform:rotate(90deg);"> 
-	<img src="gavekort2.jpg" alt="Kan ikke vise dit gavekort" style="transform:rotate(90deg);">
+	<img src="gavekort1.jpg" alt="Kan ikke vise dit gavekort" style="transform:rotate(-90deg);" width="80%"> <br />
+	<img src="gavekort2.jpg" alt="Kan ikke vise dit gavekort" style="transform:rotate(-90deg);" width="80%">
 	<br />
 	<p>Din næste stop i jagten er hos Alex og Marlene under vasken på badeværelset.</p>
 	<b>God jagt!</b>
