--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html>
+<head>
+<style>
+	img {margin-top: -300px;}
+</style>
+</head>
 <body>
 	<div style="text-align:center;">
 		<h1>Godt klaret, Janne</h1>
