--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
 <style>
 	img {margin-top: -300px;}
+	.img2 {margin-top: -600px;}
+	.bottom {margin-top: -300px;}
 </style>
 </head>
 <body>
@@ -11,10 +13,11 @@
 		<p>Inden du skal videre til din næste trin på jagten har du fortjent lidt at styrke dig på!</p>
 		<p>Derfor får du et gavekort til 2 is eller andet sødt, hos Chris & Mario på Bornholm.</p>
 		<img src="gavekort1.jpg" alt="Kan ikke vise dit gavekort" style="transform:rotate(-90deg);" width="500"> <br />
-		<img src="gavekort2.jpg" alt="Kan ikke vise dit gavekort" style="transform:rotate(-90deg);" width="500">
-		<br />
+		<img src="gavekort2.jpg" alt="Kan ikke vise dit gavekort" style="transform:rotate(-90deg);" width="500" class="img2">
+		<div class="bottom">
 		<p>Din næste stop i jagten er hos Alex og Marlene under vasken på badeværelset.</p>
 		<b>God jagt!</b>
+		</div>
 	</div>
 </body>
 </html>
