--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	img {margin-top: -300px;}
 	.img2 {margin-top: -600px;}
 	.bottom {margin-top: -300px;}
+	p {font-size: 20px;}
+	p {font-size: 20px;}
 </style>
 </head>
 <body>
@@ -15,8 +17,8 @@
 		<img src="gavekort1.jpg" alt="Kan ikke vise dit gavekort" style="transform:rotate(-90deg);" width="500"> <br />
 		<img src="gavekort2.jpg" alt="Kan ikke vise dit gavekort" style="transform:rotate(-90deg);" width="500" class="img2">
 		<div class="bottom">
-		<p>Din næste stop i jagten er hos Alex og Marlene under vasken på badeværelset.</p>
-		<b>God jagt!</b>
+			<p>Din næste stop i jagten er hos Alex og Marlene under vasken på badeværelset.</p>
+			<p><b>God jagt!</b></p>
 		</div>
 	</div>
 </body>
