--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div style="text-align:center;">
 		<h1>Godt klaret, Janne</h1>
 		<p>Du er nu godt i gang med familiens længste skattejagt.</p>
-		<p>Inden du skal videre til din næste trin på jagten har du fortjent lidt at styrke dig på!</p>
+		<p>Inden du skal videre til dit næste trin på jagten, har du fortjent lidt at styrke dig på!</p>
 		<p>Derfor får du et gavekort til 2 is eller andet sødt, hos Chris & Mario på Bornholm.</p>
 		<img src="gavekort1.jpg" alt="Kan ikke vise dit gavekort" style="transform:rotate(-90deg);" width="500"> <br />
 		<img src="gavekort2.jpg" alt="Kan ikke vise dit gavekort" style="transform:rotate(-90deg);" width="500" class="img2">
